text-align in straipsnis fix'as

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,7 +156,6 @@ h1, h2{
 
 .jumbotron h1{
     color: #173B0B;
-    text-align: center;
 }
 
 .thumbnail{
